--- a/assets/src/styles/fonts/_styles.scss
+++ b/assets/src/styles/fonts/_styles.scss
@@ -6,8 +6,8 @@
         display: block;
     }
     src:
-            url("icomoon.woff?9xu6g5") format("woff"),
-            url("icomoon.svg?9xu6g5#icomoon") format("svg");
+            url("../icomoon.woff?9xu6g5") format("woff"),
+            url("../icomoon.svg?9xu6g5#icomoon") format("svg");
 }
 
 @font-face {
