--- a/assets/src/styles/links/_variables.scss
+++ b/assets/src/styles/links/_variables.scss
@@ -2,3 +2,6 @@ $color: white;
 $hover-color: #7258E9;
 $disabled-color: grey;
 $disabled-hover-color: white;
+$color-links: #b0b2c3;
+$before-background-color: #ff6767;
+$after-background-color: #235aa6;
