Improve animations for mobile navigation

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,6 +11,7 @@
                     <span class="third-label"></span>
                 </div>
             </button>
+            <div class="mobile-animation" data-mobile-container-animation></div>
             <div class="container" data-navigation-container>
                 <button class="button-close" data-button-close>
                     <span class="first-label"></span>
