--- a/assets/src/styles/main-navigation/_styles.scss
+++ b/assets/src/styles/main-navigation/_styles.scss
@@ -10,23 +10,58 @@
     min: {
         height: 10vh;
     }
+    .mobile-animation {
+        visibility: hidden;
+        width: 100%;
+        top: 0;
+        left: -100%;
+        height: 100vh;
+        position: fixed;
+        background: {
+            image: linear-gradient(270deg,#f06449,#ef3636);
+        }
+        transition: all .5s cubic-bezier(.694,.048,.335,1);
+        z-index: 1;
+        @media (max-width: 40em) {
+            &.is-active {
+                visibility: visible;
+                left: 0;
+            }
+        }
+    }
     .container {
-        display: none;
+        @media (max-width: 40em) {
+            visibility: hidden;
+            display: grid;
+            align-content: space-between;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: -100%;
+            height: 100vh;
+            transition: all 1s ease-in-out;
+            background: {
+                image: linear-gradient(270deg,#235aa6,#101b3b);
+            }
+            .home-links {
+                visibility: hidden;
+                opacity: 0;
+                transition: margin-top 1s ease .5s, opacity 1s ease .5s;
+            }
+            .social-links {
+                visibility: hidden;
+                opacity: 0;
+                transition: margin-bottom 1s ease .5s, opacity 1s ease .5s;
+            }
+        }
         @include susanoo.breakpoint(medium) {
             display: block;
         }
         @media (max-width: 40em) {
             &.is-active {
-                display: grid;
-                align-content: space-between;
-                position: fixed;
+                visibility: visible;
                 top: 0;
                 left: 0;
-                width: 100%;
-                height: 100vh;
-                background: {
-                    image: linear-gradient(270deg,#235aa6,#101b3b);
-                }
                 z-index: 2;
                 .button-close {
                     justify-self: end;
@@ -36,11 +71,13 @@
                     }
                 }
                 .home-links {
+                    visibility: visible;
+                    opacity: 1;
+                    margin: {
+                        top: susanoo.rem-calc(-120);
+                    }
                     padding: {
                         left: susanoo.rem-calc(60);
-                    }
-                    margin: {
-                        top: susanoo.rem-calc(-60);
                     }
                     a {
                         color: var(--color-on-primary);
@@ -50,6 +87,13 @@
                         width: 100%;
                     }
                 }
+                .social-links {
+                    visibility: visible;
+                    opacity: 1;
+                    margin: {
+                        bottom: susanoo.rem-calc(16);
+                    }
+                }
             }
         }
     }
@@ -57,6 +101,11 @@
         @include list.reset-list();
     }
     .home-links {
+        @media (max-width: 40em) {
+            margin: {
+                bottom: susanoo.rem-calc(-100)
+            }
+        }
         li {
             &.icon {
                 display: none;
@@ -94,9 +143,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin: {
-            bottom: susanoo.rem-calc(16);
-        }
         flex: {
             wrap: wrap;
         }
