--- a/assets/src/styles/headlines/_styles.scss
+++ b/assets/src/styles/headlines/_styles.scss
@@ -3,6 +3,9 @@
 @use 'variables';
 
 .headlines {
+    background: {
+        color: var(--color-black-primary);
+    }
     ul {
         @include list.reset-list();
     }
