--- a/assets/src/styles/main.scss
+++ b/assets/src/styles/main.scss
@@ -9,6 +9,7 @@
 @use 'links';
 @use 'main-navigation';
 @use 'page-header';
+@use 'staging';
 @use 'projects';
 @use 'reset-list';
 @use 'susanoo-functions';
