--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,6 +2,7 @@
 
 <body>
     {{ partial "header.html" . }}
+    {{ partial "sections/staging.html" . }}
     <main class="page-body">
         {{ block "content" . }}{{ end }}
     </main>
