--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
     <div class="wrapper">
         <nav class="main-navigation">
             <a href="#">
-<!--                <img src="{{ (resources.Get "build/logo.svg").RelPermalink }}" alt="Logo" class="logo">-->
+                <img src="{{ (resources.Get "build/logo1.png").RelPermalink }}" alt="Logo" class="logo">
             </a>
             <button class="button-menu" data-button-menu>
                 <div>
