--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -10,8 +10,8 @@
     <meta property="og:description" content="Discover my Blog to get information about me and also inspiration" >
     <meta property="og:locale" content="pl_PL" >
     <meta property="og:locale:alternate" content="en_GB" >
-<!--    <link rel="icon" type="image/png" href="favicon.png">-->
-<!--    <link rel="apple-touch-icon" href="favicon.png">-->
+    <link rel="icon" type="image/png" href="{{ (resources.Get "favicon.png").RelPermalink }}">
+    <link rel="apple-touch-icon" href="{{ (resources.Get "favicon.png").RelPermalink }}">
 
     <title>{{ .Site.Title }}</title>
 
