Change favicon and lower the font-size of staging headline

--- a/assets/src/styles/projects/_styles.scss
+++ b/assets/src/styles/projects/_styles.scss
@@ -3,6 +3,13 @@
 @use '../reset-list' as list;
 
 .projects {
+    .headline {
+        text-align: center;
+        color: #4a4a4b;
+        font: {
+            weight: var(--font-weight-bold);
+        }
+    }
     ul {
         @include list.reset-list();
     }
