Fixed margin issue in Social links

--- a/assets/src/styles/staging/_styles.scss
+++ b/assets/src/styles/staging/_styles.scss
@@ -42,6 +42,9 @@
         position: sticky;
         top: 1rem;
         height: 100%;
+        margin: {
+            left: auto;
+        }
         span {
             display: none;
         }
