Add projects section to default list layout

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,5 +1,6 @@
 {{ define "content" }}
 
+    {{ partial "sections/projects.html" . }}
 <ul>
     {{- range where .Site.RegularPages "Type" "pattern-library" -}}
     <li>
