Add second projects section

--- a/assets/src/styles/main.scss
+++ b/assets/src/styles/main.scss
@@ -11,6 +11,7 @@
 @use 'page-header';
 @use 'staging';
 @use 'projects';
+@use 'projects-external';
 @use 'reset-list';
 @use 'susanoo-functions';
 @use 'section';
