--- a/layouts/pattern-library/single.html
+++ b/layouts/pattern-library/single.html
@@ -1,4 +1,5 @@
 {{ define "content" }}
     {{ partial "sections/projects.html" . }}
+    {{ partial "sections/projects-external.html" . }}
     {{ partial "sections/headlines.html" . }}
 {{ end }}
