--- a/layouts/partials/sections/projects.html
+++ b/layouts/partials/sections/projects.html
@@ -12,7 +12,7 @@
                        class="link-project" target="_blank"
                        style="background-image: url('/{{ .Params.ImageName }}.png')" data-overlay>
                         <h2 class="h3 headline">{{ .Title }}</h2>
-                        <div class="h5 credits">One of my First projects</div>
+                        <div class="h5 credits">{{ .Params.Credits }}</div>
                         <div class="project-mask"></div>
                         <div class="project-mask--hover"></div>
                         <div class="numbers-mask">0{{ add $index 1}}</div>
