Add new second projects section to default list Template

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,7 @@
 {{ define "content" }}
 
     {{ partial "sections/projects.html" . }}
+    {{ partial "sections/projects-external.html" . }}
 <ul>
     {{- range where .Site.RegularPages "Type" "pattern-library" -}}
     <li>
