Add footer Markup and Styling

--- a/assets/src/styles/main.scss
+++ b/assets/src/styles/main.scss
@@ -12,6 +12,8 @@
 @use 'staging';
 @use 'projects';
 @use 'projects-external';
+@use 'social-links';
+@use 'footer';
 @use 'reset-list';
 @use 'susanoo-functions';
 @use 'section';
