--- a/layouts/partials/sections/staging.html
+++ b/layouts/partials/sections/staging.html
@@ -17,27 +17,6 @@
                 </div>
             </div>
         </div>
-        <ul class="social-list">
-            <li>
-                <a href="#" class="github">
-                    <span>Github</span>
-                </a>
-            </li>
-            <li>
-                <a href="#" class="twitter">
-                    <span>Twitter</span>
-                </a>
-            </li>
-            <li>
-                <a href="#" class="linkedin">
-                    <span>Linkedin</span>
-                </a>
-            </li>
-            <li>
-                <a href="#" class="codepen">
-                    <span>Codepen</span>
-                </a>
-            </li>
-        </ul>
+        {{ partial "social-links.html" . }}
     </div>
 </section>
