--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,11 @@
-<footer>
-
+<footer class="footer">
+    <div class="wrapper">
+        <div class="inner-wrapper">
+            <div class="container">
+                <div class="copyright">&copy; All rights reserved by Dawid Oleksiuk</div>
+                {{ partial "social-links.html" . }}
+            </div>
+        </div>
+    </div>
 </footer>
 </html>
