--- a/layouts/partials/sections/projects.html
+++ b/layouts/partials/sections/projects.html
@@ -10,7 +10,7 @@
                 <li>
                     <a href="{{ .Params.affiliatelink }}"
                        class="link-project" target="_blank"
-                       style="background-image: url('/{{ .Params.ImageName }}.png')" data-overlay>
+                       style="background-image: url('/{{ .Params.ImageName }}.png')" rel="external noopener" data-overlay>
                         <h2 class="h3 headline">{{ .Title }}</h2>
                         <div class="h5 credits">{{ .Params.Credits }}</div>
                         <div class="project-mask"></div>
